FAC-176: Error Messages updated

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -49,16 +49,20 @@ get-expert-group-list.size.min='size' must be greater than or equal to 1
 get-expert-group-list.size.max='size' must be less than or equal to 100
 
 update-expert-group.id.notNull='id' may not be null
-update-expert-group.name.notBlank='name' may not be empty
-update-expert-group.name.size.min='name' must be less than maximum size
-update-expert-group.name.size.max='name' must be more than minimum size
+update-expert-group.title.notBlank='title' may not be empty
+update-expert-group.title.size.min='title' must be less than maximum size
+update-expert-group.title.size.max='title' must be more than minimum size
+update-expert-group.bio.notBlank='bio' may not be empty
+update-expert-group.bio.size.min='bio' must be more than minimum size
 update-expert-group.bio.size.max='bio' must be less than maximum size
-update-expert-group.bio.notBlank='picture' may not be empty
-update-expert-group.about.size.max='about' must be less than maximum size
 update-expert-group.about.notBlank='about' may not be empty
-update-expert-group.website.size.max='website' must be less than maximum size
+update-expert-group.about.size.min='about' must be more than minimum size
+update-expert-group.about.size.max='about' must be less than maximum size
 update-expert-group.website.notBlank='website' may not be empty
+update-expert-group.website.size.min='website' must be more than minimum size
+update-expert-group.website.size.max='website' must be less than maximum size
 update-expert-group.picture.notBlank='picture' may not be empty
+update-expert-group.picture.size.min='picture' must be more than minimum size
 update-expert-group.picture.size.max='picture' must be less than maximum size
 
 upload-kit.dsl-file.notNull='dslFile' may not be null
