FAC-176: The 'title' duplication check added

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -101,3 +101,4 @@ get-attribute-score-detail.assessment.id.notNull='assessmentId' may not be empty
 get-attribute-score-detail.attribute.id.notNull='attributeId' may not be empty
 get-attribute-score-detail.maturityLevel.id.notNull='maturityLevelId' may not be empty
 
+create-expert-group.duplicate.title = An expert group with the same 'title' already exists.
