FAC-198: Translate duplicate kit title error

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -60,3 +60,4 @@ create-kit-by-dsl.title.notNull='title' may not be null
 create-kit-by-dsl.summary.notNull='summary' may not be null
 create-kit-by-dsl.about.notNull='about' may not be null
 create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
+create-kit-by-dsl.duplicate.title=A kit with the same 'title' already exists.
