FAC-198: Check string fields length

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -61,3 +61,9 @@ create-kit-by-dsl.summary.notNull='summary' may not be null
 create-kit-by-dsl.about.notNull='about' may not be null
 create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
 create-kit-by-dsl.duplicate.title=A kit with the same 'title' already exists.
+create-kit-by-dsl.title.size.min=title length must be more than 3
+create-kit-by-dsl.title.size.max=title length must be less than 100
+create-kit-by-dsl.summary.size.min=summary length must be more than 3
+create-kit-by-dsl.summary.size.max=summary length must be less than 1000
+create-kit-by-dsl.about.size.min=about length must be more than 3
+create-kit-by-dsl.about.size.max=about length must be less than 1000
