FAC-176: Url constrain added to 'website' field

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -70,5 +70,6 @@ create-expert-group.picture.size.max='picture' must be less than maximum size
 create-expert-group.about.notBlank='about' may not be empty
 create-expert-group.about.size.min='about' must be more than minimum size
 create-expert-group.about.size.max='about' must be less than maximum size
+create-expert-group.website.notUrl='website' must be a URL
 create-expert-group.website.size.min='website' must be more than minimum size
 create-expert-group.website.size.max='website' must be less than maximum size
