FAC-176: Some exception handling added for empty 'picture' and 'website'

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -65,7 +65,7 @@ create-expert-group.title.size.max='title' must be less than maximum size
 create-expert-group.bio.notBlank='bio' may not be empty
 create-expert-group.bio.size.min='bio' must be more than minimum size
 create-expert-group.bio.size.max='bio' must be less than maximum size
-create-expert-group.picture.size.min='picture' must be more than minimum size
+create-expert-group.picture.file-format='picture' should be valid file format
 create-expert-group.picture.size.max='picture' must be less than maximum size
 create-expert-group.about.notBlank='about' may not be empty
 create-expert-group.about.size.min='about' must be more than minimum size
