FAC-176: some errors renamed and some parameters ordered

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -60,16 +60,16 @@ create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
 
 create-expert-group.title.notBlank='title' may not be empty
-create-expert-group.title.size.min='title' must be more than minimum size
-create-expert-group.title.size.max='title' must be less than maximum size
+create-expert-group.title.size.min='title' must be more or equal to 3
+create-expert-group.title.size.max='title' must be less than or equal to 100
 create-expert-group.bio.notBlank='bio' may not be empty
-create-expert-group.bio.size.min='bio' must be more than minimum size
-create-expert-group.bio.size.max='bio' must be less than maximum size
+create-expert-group.bio.size.min='bio' must be more than or equal to 3
+create-expert-group.bio.size.max='bio' must be less than or equal to 200
 create-expert-group.picture.file-format='picture' should be valid file format
 create-expert-group.picture.size.max='picture' must be less than maximum size
 create-expert-group.about.notBlank='about' may not be empty
-create-expert-group.about.size.min='about' must be more than minimum size
-create-expert-group.about.size.max='about' must be less than maximum size
+create-expert-group.about.size.min='about' must be more than or equal to 3
+create-expert-group.about.size.max='about' must be less than or equal to 500
 create-expert-group.website.notUrl='website' must be a URL
-create-expert-group.website.size.min='website' must be more than minimum size
-create-expert-group.website.size.max='website' must be less than maximum size
+create-expert-group.website.size.min='website' must be more or equal to 3
+create-expert-group.website.size.max='website' must be less than or equal to 200
