--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -53,7 +53,7 @@ upload-kit.expert-group-id.notNull='expertGroupId' may not be null
 
 create-kit-by-dsl.kit-dsl-id.notNull='kitDslId' may not be null
 create-kit-by-dsl.kit-dsl.notFound=AssessmentKitDsl with the given id does not exist
-create-kit-by-dsl.kit-dsl-file.notFound=No file found by the given information
+create-kit-by-dsl.kit-dsl-file.notFound=No DSL file found at the given address
 create-kit-by-dsl.title.notNull='title' may not be null
 create-kit-by-dsl.title.size.min=title length must be greater than or equal to 3
 create-kit-by-dsl.title.size.max=title length must be less than or equal to 100
