--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -69,17 +69,15 @@ create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
 create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 
 create-expert-group.title.notBlank='title' may not be empty
-create-expert-group.title.size.min='title' must be more or equal to 3
-create-expert-group.title.size.max='title' must be less than or equal to 100
+create-expert-group.title.size.min='title' length must be greater or equal to 3
+create-expert-group.title.size.max='title' length must be less than or equal to 100
 create-expert-group.bio.notBlank='bio' may not be empty
-create-expert-group.bio.size.min='bio' must be more than or equal to 3
-create-expert-group.bio.size.max='bio' must be less than or equal to 200
-create-expert-group.picture.file-format='picture' file should have a valid format such as .png, .jpeg, .jpg
-create-expert-group.picture.size.max='picture' must be less than maximum size
+create-expert-group.bio.size.min='bio' length must be greater than or equal to 3
+create-expert-group.bio.size.max='bio' length must be less than or equal to 200
 create-expert-group.about.notBlank='about' may not be empty
-create-expert-group.about.size.min='about' must be more than or equal to 3
-create-expert-group.about.size.max='about' must be less than or equal to 500
+create-expert-group.about.size.min='about' length must be greater than or equal to 3
+create-expert-group.about.size.max='about' length must be less than or equal to 500
 create-expert-group.website.notUrl='website' must be a URL
-create-expert-group.website.size.min='website' must be more than or equal to 3
-create-expert-group.website.size.max='website' must be less than or equal to 200
+create-expert-group.website.size.min='website' length must be greater than or equal to 3
+create-expert-group.website.size.max='website' length must be less than or equal to 200
 create-expert-group.duplicate.title = An expert group with the same 'title' already exists.
