--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -35,7 +35,7 @@ get-kit-user-list.size.max='size' must be less than or equal to 100
 get-kit-minimal-info.kitId.notNull='kitId' may not be empty
 get-kit-minimal-info.kitId.notFound=AssessmentKit with the given id does not exist
 
-get-kit-download-link.kitId.notNull='kitId' may not be empty
+get-kit-dsl-download-link.kitId.notNull='kitId' may not be empty
 
 delete-kit-user-access.kitId.notNull='kitId' may not be null
 delete-kit-user-access.userId.notNull='userId' may not be null
