FAC-217: Refactor createDownloadLink method implementation

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -36,6 +36,7 @@ get-kit-minimal-info.kitId.notNull='kitId' may not be empty
 get-kit-minimal-info.kitId.notFound=AssessmentKit with the given id does not exist
 
 get-kit-dsl-download-link.kitId.notNull='kitId' may not be empty
+get-kit-dsl-download-link.dslFile.notFound=DSL file not found
 get-kit-dsl-file-path.notFound='filePath' not found
 
 delete-kit-user-access.kitId.notNull='kitId' may not be null
