--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -39,7 +39,7 @@ get-kit-minimal-info.kitId.notFound=AssessmentKit with the given id does not exi
 
 get-kit-dsl-download-link.kitId.notNull='kitId' may not be empty
 get-kit-dsl-download-link.dslFile.notFound=DSL file not found
-get-kit-dsl-file-path.notFound='filePath' not found
+get-kit-dsl-download-link.filePath.notFound='filePath' not found
 
 delete-kit-user-access.kitId.notNull='kitId' may not be null
 delete-kit-user-access.userId.notNull='userId' may not be null
@@ -60,7 +60,6 @@ upload-kit.dsl.has-error=uploaded dsl has error
 
 create-kit-by-dsl.kit-dsl-id.notNull='kitDslId' may not be null
 create-kit-by-dsl.kit-dsl.notFound=AssessmentKitDsl with the given id does not exist
-create-kit-by-dsl.kit-dsl-file.notFound=No DSL file found at the given address
 create-kit-by-dsl.title.notNull='title' may not be null
 create-kit-by-dsl.title.size.min=title length must be greater than or equal to 3
 create-kit-by-dsl.title.size.max=title length must be less than or equal to 100
