FAC-207:feature:Add checkAssessmentResultValidity

--- a/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
@@ -1,2 +1,4 @@
 suggest-advice.assessmentId.notNull='assessmentId' may not be null
 suggest-advice.targets.size.min='size' must be greater than or equal to 1
+suggest-advice.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
+suggest-advice.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
