--- a/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
@@ -1,4 +1,5 @@
 suggest-advice.assessmentId.notNull='assessmentId' may not be null
-suggest-advice.targets.size.min='size' must be greater than or equal to 1
+suggest-advice.targets.notNull='targets' may not be null
+suggest-advice.targets.size.min='targets' size must be greater than or equal to 1
 suggest-advice.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 suggest-advice.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
