--- a/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
@@ -4,3 +4,5 @@ create-advice.attributeLevelScores.size.min='attributeLevelScores' size must be 
 create-advice.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 create-advice.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 create-advice.finding-best-solution.execution=an error occurred while trying to compute advice
+
+load-advice-calc.assessmentResult.notFound= no assessmentResult found by this 'assessmentId'
