FAC-207:feature:Refactor domain

--- a/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
@@ -1,6 +1,6 @@
 create-advice.assessmentId.notNull='assessmentId' may not be null
-create-advice.attributeLevelScores.notNull='attributeLevelScores' may not be null
-create-advice.attributeLevelScores.size.min='attributeLevelScores' size must be greater than or equal to 1
+create-advice.attributeLevelTargets.notNull='attributeLevelTargets' may not be null
+create-advice.attributeLevelTargets.size.min='attributeLevelTargets' size must be greater than or equal to 1
 create-advice.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 create-advice.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 create-advice.finding-best-solution.execution=an error occurred while trying to compute advice
