--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -7,7 +7,7 @@ kit.id.notFound=AssessmentKit with the given id does not exist
 expert-group.id.notFound=ExpertGroup with the given id does not exist
 
 update-kit-by-dsl.kitId.notNull='kitId' may not be null
-update-kit-by-dsl.dsl-content.notNull='dslContent' may not be empty
+update-kit-by-dsl.kit-dsl-id.notNull='kitDslId' may not be null
 
 entities.subject.single.first=Subject
 entities.subject.plural=subjects
