--- a/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
@@ -5,5 +5,4 @@ create-advice.assessmentResult.notFound=no assessmentResult found by this 'asses
 create-advice.assessment.notFound=no assessment found by this 'assessmentId'
 create-advice.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 create-advice.finding-best-solution.execution=an error occurred while trying to compute advice
-
-load-advice-calc.assessmentResult.notFound= no assessmentResult found by this 'assessmentId'
+create-advice.assessmentAttributeLevel.notFound=Given attribute level target does not belong to this assessment
