FAC-209: UserId and expertGroupId combination uniqueness constraint caught in code

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -90,3 +90,4 @@ create-expert-group.website.size.max='website' length must be less than or equal
 
 invite-expert-group-member.expert-group-id.not-null='expertGroupId' may not be null
 invite-expert-group-member.email.not-found=User email not found
+invite-expert-group-member.expert-group-id-user-id.duplicate='expertGroupId' and 'userId' combination should be unique
