--- a/flickit-assessment-common/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/messages_en.properties
@@ -2,3 +2,5 @@ common.currentUser.notAllowed=Not allowed to perform this action
 common.currentUserId.notNull='currentUser' may not be null
 common.header.authorization.notNull=Missing Authorization header
 common.currentUser.notFound='currentUser' with the given id not found
+common.assessmentResult.notFound=No assessment result found for the given assessment
+common.assessmentResult.notValid=Assessment result is not valid. Recalculation is needed
