FAC-177: Ready to review

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -54,7 +54,6 @@ get-expert-group-list.page.min='page' must be greater than or equal to 0
 get-expert-group-list.size.min='size' must be greater than or equal to 1
 get-expert-group-list.size.max='size' must be less than or equal to 100
 
-update-expert-group.id.notNull='id' may not be null
 update-expert-group.title.notBlank='title' may not be empty
 update-expert-group.title.size.min='title' must be less than maximum size
 update-expert-group.title.size.max='title' must be more than minimum size
@@ -64,6 +63,7 @@ update-expert-group.bio.size.max='bio' must be less than maximum size
 update-expert-group.about.notBlank='about' may not be empty
 update-expert-group.about.size.min='about' must be more than minimum size
 update-expert-group.about.size.max='about' must be less than maximum size
+update-expert-group.website.notUrl='website' must be a URL
 update-expert-group.website.size.min='website' must be more than minimum size
 update-expert-group.website.size.max='website' must be less than maximum size
 
