FAC-234 Refactor assessment attribute/level checking logic
The assessment attribute checking logic has been refactored for improved efficiency and readability. Earlier, each attribute level relation was validated individually. Now, it fetches all related attribute ids and maturity level ids in bulk and checks their existence. Also, the class and method names have been renamed for better clarity.

--- a/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
@@ -5,4 +5,5 @@ create-advice.assessmentResult.notFound=no assessmentResult found by this 'asses
 create-advice.assessment.notFound=no assessment found by this 'assessmentId'
 create-advice.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 create-advice.finding-best-solution.execution=an error occurred while trying to compute advice
-create-advice.assessmentAttributeLevel.notFound=Given attribute level target does not belong to this assessment
+create-advice.assessmentAttributeRelation.notFound=Given attribute does not belong to this assessment
+create-advice.assessmentLevelRelation.notFound=Given maturity level does not belong to this assessment
