FAC-233 Add EvidenceTypeId to Evidence Entity
The code has been updated to now include an 'evidenceTypeId' property to the Evidence entity. The changes include the addition of validation properties, updates to relevant methods to handle the new property, and also the creation of a new Liquibase changelog for appending the new 'evidence_type_id' field to the 'fac_evidence' database table. The associated test cases have been updated to reflect this change.

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -30,6 +30,8 @@ add-evidence.desc.size.min=description length must be more than 3
 add-evidence.desc.size.max=description length must be less than 1000
 add-evidence.assessmentId.notNull='assessmentId' may not be empty
 add-evidence.questionId.notNull='questionId' may not be empty
+add-evidence.evidenceTypeId.min=evidenceTypeId must be greater than or equal to 1
+add-evidence.evidenceTypeId.max=evidenceTypeId must be less than or equal to 2
 
 update-assessment.id.notNull='assessmentId' may not be null
 update-assessment.id.notFound=no assessment found by this 'assessmentId'
