FAC-202: Minor review problems fixed

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -55,6 +55,7 @@ get-expert-group-list.size.min='size' must be greater than or equal to 1
 get-expert-group-list.size.max='size' must be less than or equal to 100
 
 get-expert-group.expert-group.notFound=Expert Group with the given id does not exist
+get-expert-group.expert-group-id.notNull='expertGroupId' may not be null
 
 upload-kit.dsl-file.notNull='dslFile' may not be null
 upload-kit.expert-group-id.notNull='expertGroupId' may not be null
