--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -89,5 +89,5 @@ create-expert-group.website.size.min='website' length must be greater than or eq
 create-expert-group.website.size.max='website' length must be less than or equal to 200
 
 invite-expert-group-member.expert-group-id.not-null='expertGroupId' may not be null
-invite-expert-group-member.user-id.notBlank='userId' may not be empty
+invite-expert-group-member.user-id.notNull='userId' may not be empty
 invite-expert-group-member.expert-group-id-user-id.duplicate='expertGroupId' and 'userId' combination should be unique
