FAC-236 Add evidenceTypeId to the UpdateEvidence service
The commit includes updating related tests, methods, objects and classes to incorporate evidenceTypeId in the UpdateEvidence service. Validation constraints for this new field have also been added.

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -77,6 +77,8 @@ update-evidence.id.notNull=evidence 'id' may not be empty
 update-evidence.description.notBlank=description may not be empty
 update-evidence.description.size.min=description length must be more than or equal to 3
 update-evidence.description.size.max=description length must be less than or equal to 1000
+update-evidence.evidenceTypeId.min=evidenceTypeId must be greater than or equal to 1
+update-evidence.evidenceTypeId.max=evidenceTypeId must be less than or equal to 2
 
 get-subject-progress.assessment.id.notNull='assessmentId' may not be empty
 get-subject-progress.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
