--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -88,6 +88,6 @@ create-expert-group.website.notUrl='website' must be a URL
 create-expert-group.website.size.min='website' length must be greater than or equal to 3
 create-expert-group.website.size.max='website' length must be less than or equal to 200
 
-invite-expert-group-member.expert-group-id.not-null='expertGroupId' may not be null
+invite-expert-group-member.expert-group-id.notNull='expertGroupId' may not be null
 invite-expert-group-member.user-id.notNull='userId' may not be empty
 invite-expert-group-member.expert-group-id-user-id.duplicate='expertGroupId' and 'userId' combination should be unique
