FAC-209: CheckExpertGroupOwner mechanism added

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -91,3 +91,4 @@ create-expert-group.website.size.max='website' length must be less than or equal
 invite-expert-group-member.expert-group-id.notNull='expertGroupId' may not be null
 invite-expert-group-member.user-id.notNull='userId' may not be empty
 invite-expert-group-member.expert-group-id-user-id.duplicate='expertGroupId' and 'userId' combination should be unique
+invite-expert-group-member.owner-id.accessDenied=Owner access does not exist
