--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -30,7 +30,7 @@ add-evidence.desc.size.min=description length must be more than 3
 add-evidence.desc.size.max=description length must be less than 1000
 add-evidence.assessmentId.notNull='assessmentId' may not be empty
 add-evidence.questionId.notNull='questionId' may not be empty
-add-evidence.evidenceType.invalid=evidence type is not valid
+add-evidence.type.invalid=evidence type is not valid
 
 update-assessment.id.notNull='assessmentId' may not be null
 update-assessment.id.notFound=no assessment found by this 'assessmentId'
