FAC-236 Rename 'evidenceType' field to 'type'
The renaming occurred across various files including DTOs, domain models, error messages, and tests to improve code uniformity and maintainability.

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -76,7 +76,7 @@ update-evidence.id.notNull=evidence 'id' may not be empty
 update-evidence.description.notBlank=description may not be empty
 update-evidence.description.size.min=description length must be more than or equal to 3
 update-evidence.description.size.max=description length must be less than or equal to 1000
-update-evidence.evidenceType.invalid=evidence type is not valid
+update-evidence.type.invalid=evidence type is not valid
 
 get-subject-progress.assessment.id.notNull='assessmentId' may not be empty
 get-subject-progress.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
