--- a/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
@@ -1,9 +1,9 @@
-create-advice.assessmentId.notNull='assessmentId' may not be null
-create-advice.attributeLevelTargets.notNull='attributeLevelTargets' may not be null
-create-advice.attributeLevelTargets.size.min='attributeLevelTargets' size must be greater than or equal to 1
-create-advice.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
-create-advice.assessment.notFound=no assessment found by this 'assessmentId'
-create-advice.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
-create-advice.finding-best-solution.execution=an error occurred while trying to compute advice
-create-advice.assessmentAttributeRelation.notFound=Given attribute does not belong to this assessment
-create-advice.assessmentLevelRelation.notFound=Given maturity level does not belong to this assessment
+calculate-advice.assessmentId.notNull='assessmentId' may not be null
+calculate-advice.attributeLevelTargets.notNull='attributeLevelTargets' may not be null
+calculate-advice.attributeLevelTargets.size.min='attributeLevelTargets' size must be greater than or equal to 1
+calculate-advice.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
+calculate-advice.assessment.notFound=no assessment found by this 'assessmentId'
+calculate-advice.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
+calculate-advice.finding-best-solution.execution=an error occurred while trying to compute advice
+calculate-advice.assessmentAttributeRelation.notFound=Given attribute does not belong to this assessment
+calculate-advice.assessmentLevelRelation.notFound=Given maturity level does not belong to this assessment
