FAC-265: DELETE_EXPERT_GROUP_EXPERT_GROUP_ID_NOT_NULL error added

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -93,3 +93,4 @@ create-expert-group.website.size.max='website' length must be less than or equal
 
 delete-expert-group.expert-group.access-denied=Deleting expert group with the given id is not possible
 delete-expert-group.expert-group-id.notFound=Expert group with the given id is not found
+delete-expert-group.expert-group-id.notNull='ExpertGroupId' may not be null
