--- a/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
@@ -7,3 +7,9 @@ calculate-advice.assessmentResult.notValid=assessmentResult is not valid. Recalc
 calculate-advice.finding-best-solution.execution=an error occurred while trying to compute advice
 calculate-advice.assessmentAttributeRelation.notFound=Given attribute does not belong to this assessment
 calculate-advice.assessmentLevelRelation.notFound=Given maturity level does not belong to this assessment
+
+create-advice.assessmentId.notNull='assessmentId' may not be null
+create-advice.attributeLevelTargets.notNull='attributeLevelTargets' may not be null
+create-advice.attributeLevelTargets.size.min='attributeLevelTargets' size must be greater than or equal to 1
+create-advice.adviceQuestions.notNull='attributeLevelTargets' may not be null
+create-advice.adviceQuestions.size.min='adviceQuestions' size must be greater than or equal to 1
