FAC-249:feature:Impl CreateAdviceService

--- a/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/advice/messages_en.properties
@@ -13,3 +13,8 @@ create-advice.attributeLevelTargets.notNull='attributeLevelTargets' may not be n
 create-advice.attributeLevelTargets.size.min='attributeLevelTargets' size must be greater than or equal to 1
 create-advice.adviceQuestions.notNull='attributeLevelTargets' may not be null
 create-advice.adviceQuestions.size.min='adviceQuestions' size must be greater than or equal to 1
+create-advice.advice.notFound=no advice found by this 'adviceId'
+create-advice.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
+create-advice.assessment.notFound=no assessment found by this 'assessmentId'
+create-advice.assessmentAttributeRelation.notFound=Given attribute does not belong to this assessment
+create-advice.assessmentLevelRelation.notFound=Given maturity level does not belong to this assessment
