--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -59,6 +59,7 @@ get-evidence-list.page.min='page' must be greater than or equal to 0
 get-attribute-evidence-list.assessmentId.notNull='assessmentId' may not be empty
 get-attribute-evidence-list.attributeId.notNull='attributeId' may not be empty
 get-attribute-evidence-list.assessmentId.notFound='assessmentId' is not valid
+get-attribute-evidence-list.type.invalid =evidence type is not valid
 get-attribute-evidence-list.size.min='size' must be greater than or equal to 1
 get-attribute-evidence-list.size.max='size' must be less than or equal to 100
 get-attribute-evidence-list.page.min='page' must be greater than or equal to 0
