FAC-255: Replace kitId with kitVersionId in subject queries

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -1,4 +1,5 @@
 common.internal.error=An unexpected error occurred
+assessment-kit-id.notFound=no assessmentKit found by this 'kitId'
 
 create-assessment.title.notBlank=title may not be empty
 create-assessment.title.size.min=title length must be more than 3
