--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -91,8 +91,8 @@ create-expert-group.website.notUrl='website' must be a URL
 create-expert-group.website.size.min='website' length must be greater than or equal to 3
 create-expert-group.website.size.max='website' length must be less than or equal to 200
 
-get-expert-group-members.id.notNull='id' may not be null;
-get-expert-group-members.size.min='size' must be greater than or equal to 1;
-get-expert-group-members.size.max='size' must be less than or equal to 100;
-get-expert-group-members.page.min='page' must be greater than or equal to 0;
+get-expert-group-members.id.notNull='id' may not be null
+get-expert-group-members.size.min='size' must be greater than or equal to 1
+get-expert-group-members.size.max='size' must be less than or equal to 100
+get-expert-group-members.page.min='page' must be greater than or equal to 0
 get-expert-group-members.expertGroup.notFound=Expert Group with the given id does not exist
