FAC-272: Replace subjectId with subjectRefNum in subjectValue uses

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -78,7 +78,7 @@ get-questionnaires-progress.assessmentId.notNull='assessmentId' may not be empty
 get-questionnaires-progress.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 
 report-subject.assessment.id.notNull='assessmentId' may not be empty
-report-subject.subject.id.notNull='subjectId' may not be empty
+report-subject.subject.ref.num.notNull='subjectRefNum' may not be empty
 report-subject.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 report-subject.subjectValue.notFound=no subjectValue found by this 'assessmentResultId' and 'subjectId'
 report-subject.maturityLevelId.notFound='maturityLevelId' is not valid
