--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -31,7 +31,7 @@ add-evidence.desc.notBlank=description may not be empty
 add-evidence.desc.size.min=description length must be more than 3
 add-evidence.desc.size.max=description length must be less than 1000
 add-evidence.assessmentId.notNull='assessmentId' may not be empty
-add-evidence.questionId.notNull='questionId' may not be empty
+add-evidence.questionRefNum.notNull='questionRefNum' may not be empty
 add-evidence.type.invalid=evidence type is not valid
 
 update-assessment.id.notNull='assessmentId' may not be null
@@ -51,7 +51,7 @@ get-answer-list.size.max='size' must be less than or equal to 100
 get-answer-list.page.min='page' must be greater than or equal to 0
 get-answer-list.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
 
-get-evidence-list.questionId.notNull='questionId' may not be empty
+get-evidence-list.questionRefNum.notNull='questionRefNum' may not be empty
 get-evidence-list.assessmentId.notNull='assessmentId' may not be empty
 get-evidence-list.assessmentId.notFound='assessmentId' is not valid
 get-evidence-list.size.min='size' must be greater than or equal to 1
