FAC-284:feature:Replace questionRefNum in SubmitAnswerUseCase

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -18,7 +18,7 @@ crate-subjectvalue.assessmentResultId.notFound='assessmentResultId' is not valid
 submit-answer.assessmentId.notNull='assessmentId' may not be null
 submit-answer.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 submit-answer.questionnaireId.notNull='questionnaireId' may not be empty
-submit-answer.questionId.notNull='questionId' may not be empty
+submit-answer.questionRefNum.notNull='questionRefNum' may not be empty
 submit-answer.questionId.notFound=no question found by this 'questionId'
 
 get-assessment-list.spaceId.notNullOrEmpty='spaceIds' may not be null or empty
