FAC-293: Create use case, service and controller

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -90,3 +90,5 @@ create-expert-group.about.size.max='about' length must be less than or equal to 
 create-expert-group.website.notUrl='website' must be a URL
 create-expert-group.website.size.min='website' length must be greater than or equal to 3
 create-expert-group.website.size.max='website' length must be less than or equal to 200
+
+get-kit-stats.kit-id.notNull='assessment_kit_id' does not exist
