--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -20,6 +20,7 @@ submit-answer.assessmentResult.notFound=no assessmentResult found by this 'asses
 submit-answer.questionnaireId.notNull='questionnaireId' may not be empty
 submit-answer.questionRefNum.notNull='questionRefNum' may not be empty
 submit-answer.questionId.notFound=no question found by this 'questionId'
+submit-answer.answerOptionId.notFound=no answer option found by this 'answerOptionId'
 
 get-assessment-list.spaceId.notNullOrEmpty='spaceIds' may not be null or empty
 get-assessment-list.size.min='size' must be greater than or equal to 1
