--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -92,3 +92,4 @@ create-expert-group.website.size.min='website' length must be greater than or eq
 create-expert-group.website.size.max='website' length must be less than or equal to 200
 
 get-kit-stats.kit-id.notNull='assessment_kit_id' does not exist
+get-kit-stats.kit-id.notFound=AssessmentKit with the given id does not exist
