--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -1,3 +1,5 @@
+file-storage.file.notFound=File not found
+
 get-expert-group-list.page.min='page' must be greater than or equal to 0
 get-expert-group-list.size.min='size' must be greater than or equal to 1
 get-expert-group-list.size.max='size' must be less than or equal to 100
