--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -22,9 +22,8 @@ create-expert-group.website.size.min='website' length must be greater than or eq
 create-expert-group.website.size.max='website' length must be less than or equal to 200
 
 invite-expert-group-member.expert-group-id.notNull='expertGroupId' may not be null
-invite-expert-group-member.user-id.notNull='userId' may not be empty
-invite-expert-group-member.expert-group-id-user-id.duplicate='expertGroupId' and 'userId' combination should be unique
-invite-expert-group-member.owner-id.accessDenied=Owner access does not exist
+invite-expert-group-member.user-id.notNull='userId' may not be null
+invite-expert-group-member.expert-group-id-user-id.duplicate=The user with the 'userId' already has access to the expert group with the 'expertGroupId'
 invite-expert-group-member.user-id.notFound='UserId' not found
 
 get-expert-group-members.id.notNull='id' may not be null
