210: Error messages added

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -1,5 +1,7 @@
 file-storage.file.notFound=File not found
 
+expert-group.id.notFound=ExpertGroup with the given id does not exist
+
 get-expert-group-list.page.min='page' must be greater than or equal to 0
 get-expert-group-list.size.min='size' must be greater than or equal to 1
 get-expert-group-list.size.max='size' must be less than or equal to 100
@@ -26,3 +28,7 @@ get-expert-group-members.size.min='size' must be greater than or equal to 1
 get-expert-group-members.size.max='size' must be less than or equal to 100
 get-expert-group-members.page.min='page' must be greater than or equal to 0
 get-expert-group-members.expertGroup.notFound=Expert Group with the given id does not exist
+
+delete-expert-group-member.expert-group-id.notNull='expertGroupId' may not be null
+delete-expert-group-member.user-id.notNull='userId' may not be null
+delete-expert-group-member.user-id.notFound='UserId' not found
