209: new constraint names added or replaced

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -25,6 +25,7 @@ invite-expert-group-member.expert-group-id.notNull='expertGroupId' may not be nu
 invite-expert-group-member.user-id.notNull='userId' may not be null
 invite-expert-group-member.expert-group-id-user-id.duplicate=The user with the 'userId' already has access to the expert group with the 'expertGroupId'
 invite-expert-group-member.user-id.notFound='UserId' not found
+invite-expert-group-member.member.notFound=Member with the given id does not exist
 
 get-expert-group-members.id.notNull='id' may not be null
 get-expert-group-members.size.min='size' must be greater than or equal to 1
