209: Mail link problem fixed

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -31,7 +31,7 @@ invite-expert-group-member.mail.subject=Invite to join
 invite-expert-group-member.mail.body=\
     <p>Dear recipient,</p> \
     <p>You have been invited to join our expert group. Please click the following link to confirm your invitation:</p> \
-    <p><a href="http://www.example.com/expert-groups/invite/confirm/"{0}">Click here to confirm"</a></p>
+    <p><a href="http://www.example.com/expert-groups/invite/confirm/{0}">Click here to confirm</a></p>
 
 get-expert-group-members.id.notNull='id' may not be null
 get-expert-group-members.size.min='size' must be greater than or equal to 1
