--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -38,3 +38,6 @@ get-expert-group-members.size.min='size' must be greater than or equal to 1
 get-expert-group-members.size.max='size' must be less than or equal to 100
 get-expert-group-members.page.min='page' must be greater than or equal to 0
 get-expert-group-members.expertGroup.notFound=Expert Group with the given id does not exist
+
+delete-expert-group.expert-group.access-denied=Deleting expert group with the given id is not possible
+delete-expert-group.expert-group-id.notNull='ExpertGroupId' may not be null
