--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -70,5 +70,9 @@ create-kit-by-dsl.isPrivate.notNull='isPrivate' may not be null
 create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
 create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 
-get-questionnaire-list.assessment-id.notNull='assessmentId' may not be null
-
+get-questionnaire-list.assessmentId.notNull='assessmentId' may not be null
+get-questionnaire-list.currentUserId.notNull='currentUserId' may not be null
+get-questionnaire-list.size.min='size' must be greater than or equal to 1
+get-questionnaire-list.size.max='size' must be less than or equal to 50
+get-questionnaire-list.page.min='page' must be greater than or equal to 0
+get-questionnaire-list.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
