--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -40,5 +40,5 @@ get-expert-group-members.page.min='page' must be greater than or equal to 0
 get-expert-group-members.expertGroup.notFound=Expert Group with the given id does not exist
 get-expert-group-members.status.invalid=Member status is not valid
 
-delete-expert-group.expert-group.access-denied=Deleting expert group with the given id is not possible
+delete-expert-group.kits.exist=Deleting expert group with the given id is not possible
 delete-expert-group.expert-group-id.notNull='ExpertGroupId' may not be null
