FAC-301: minor renaming

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -42,5 +42,5 @@ get-expert-group-members.status.invalid=Member status is not valid
 
 confirm-expert-group-invitation.expert-group-id.notNull='expertGroupId' may not be null
 confirm-expert-group-invitation.invite-token.notNull='inviteToken' may not be null
-confirm-expert-group-invitation.invite-token.expired='inviteToken' expired
+confirm-expert-group-invitation.invite-token.expired='inviteToken' is expired
 confirm-expert-group-invitation.input-data.notValid='expertGroupId' and/or 'userId' and/or 'inviteToken' is not valid
