--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -43,4 +43,6 @@ get-expert-group-members.status.invalid=Member status is not valid
 confirm-expert-group-invitation.expert-group-id.notNull='expertGroupId' may not be null
 confirm-expert-group-invitation.invite-token.notNull='inviteToken' may not be null
 confirm-expert-group-invitation.invite-token.expired='inviteToken' is expired
-confirm-expert-group-invitation.input-data.notValid='expertGroupId' and/or 'userId' and/or 'inviteToken' is not valid
+confirm-expert-group-invitation.input-data.notValid='expertGroupId' and/or 'userId' is not valid
+confirm-expert-group-invitation.invite-token.notValid='inviteToken' is not valid
+confirm-expert-group-invitation.userId.duplicate=The user with the 'userId' already has access to the expert group with the 'expertGroupId'
