--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -49,3 +49,5 @@ confirm-expert-group-invitation.invite-token.expired='inviteToken' is expired
 confirm-expert-group-invitation.invitation-link.notValid=Expert group invitation link is not valid
 confirm-expert-group-invitation.invite-token.notValid='inviteToken' is not valid
 confirm-expert-group-invitation.userId.duplicate=The user with the 'userId' already has access to the expert group with the 'expertGroupId'
+
+file-properties.max-file-size.exceeded=maximum file size exceeded.
