FAC-299: Simply handled for kit module

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -70,4 +70,6 @@ create-kit-by-dsl.isPrivate.notNull='isPrivate' may not be null
 create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
 create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 
+file-properties.max-file-size.exceeded=maximum file size exceeded.
+
 
