FAC-293:feature:Refactor show kit stats service

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -70,5 +70,5 @@ create-kit-by-dsl.isPrivate.notNull='isPrivate' may not be null
 create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
 create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 
-get-kit-stats.kit-id.notNull='assessment_kit_id' does not exist
-get-kit-stats.kit-id.notFound=AssessmentKit with the given id does not exist
+get-kit-stats.kitId.notNull='assessment_kit_id' does not exist
+get-kit-stats.kitId.notFound=AssessmentKit with the given id does not exist
