FAC-303:feature:Move to core module
Rename use case to GetAssessmentQuestionnaireListUseCase

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -113,3 +113,9 @@ get-attribute-score-detail.assessment.id.notNull='assessmentId' may not be empty
 get-attribute-score-detail.attribute.id.notNull='attributeId' may not be empty
 get-attribute-score-detail.maturityLevel.id.notNull='maturityLevelId' may not be empty
 
+get-assessment-questionnaire-list.assessmentId.notNull='assessmentId' may not be null
+get-assessment-questionnaire-list.currentUserId.notNull='currentUserId' may not be null
+get-assessment-questionnaire-list.size.min='size' must be greater than or equal to 1
+get-assessment-questionnaire-list.size.max='size' must be less than or equal to 50
+get-assessment-questionnaire-list.page.min='page' must be greater than or equal to 0
+get-assessment-questionnaire-list.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
