FAC-331:feature:Add GetSubjectDetailUseCase

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -70,4 +70,6 @@ create-kit-by-dsl.isPrivate.notNull='isPrivate' may not be null
 create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
 create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 
-
+get-subject-detail.kitId.notNull='kitId' may not be null
+get-subject-detail.subjectId.notNull='subjectId' may not be null
+get-subject-detail.subjectId.notFound=subject with the given id does not exist
