--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -70,4 +70,6 @@ create-kit-by-dsl.isPrivate.notNull='isPrivate' may not be null
 create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
 create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 
-
+get-attribute-detail.kitId.notNull='kitId' may not be null
+get-attribute-detail.attributeId.notNull='attributeId' may not be null
+get-attribute-detail.attributeId.notFound=attribute with the given id does not exist
