--- a/flickit-assessment-common/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/messages_en.properties
@@ -7,3 +7,4 @@ common.assessmentResult.notValid=Assessment result is not valid. Recalculation i
 
 upload-file.picture-size.max=Picture file size exceeds maximum limit.
 upload-file.dsl-size.max=DSL file size exceeds maximum limit.
+upload-file.size.max=File size exceeds maximum limit.
