FAC-335:feature:Add GetQuestionDetailUseCase

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -71,3 +71,7 @@ create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
 create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 
 get-kit-stats.kitId.notNull='kitId' does not exist
+
+get-question-detail.kitId.notNull='kitId' may not be null
+get-question-detail.questionId.notNull='subjectId' may not be null
+get-question-detail.questionId.notFound=question with the given id does not exist
