--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -72,5 +72,5 @@ create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 
 get-kit-stats.kitId.notNull='kitId' does not exist
 
-get-kit-editable-info.kitId.notNull='assessment_kit_id' does not exist
+get-kit-editable-info.kitId.notNull='assessment_kit_id' may not be null
 get-kit-editable-info.kitId.notFound=AssessmentKit with the given id does not exist
