FAC-294: Remove unused message and minor refactor on some messages

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -70,7 +70,6 @@ create-kit-by-dsl.isPrivate.notNull='isPrivate' may not be null
 create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
 create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 
-get-kit-stats.kitId.notNull='kitId' does not exist
+get-kit-stats.kitId.notNull='kitId' may not be null
 
-get-kit-editable-info.kitId.notNull='assessment_kit_id' may not be null
-get-kit-editable-info.kitId.notFound=AssessmentKit with the given id does not exist
+get-kit-editable-info.kitId.notNull='kitId' may not be null
