--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -10,7 +10,7 @@ get-expert-group.expert-group-id.notNull='expertGroupId' may not be null
 create-expert-group.title.notBlank='title' may not be empty
 create-expert-group.title.size.min='title' length must be greater or equal to 3
 create-expert-group.title.size.max='title' length must be less than or equal to 100
-create-expert-group.title.duplicate = An expert group with the same 'title' already exists.
+create-expert-group.code_deletion_time.duplicate = An expert group with the same 'title' already exists.
 create-expert-group.bio.notBlank='bio' may not be empty
 create-expert-group.bio.size.min='bio' length must be greater than or equal to 3
 create-expert-group.bio.size.max='bio' length must be less than or equal to 200
