--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -54,3 +54,4 @@ confirm-expert-group-invitation.userId.duplicate=The user with the 'userId' alre
 
 delete-expert-group-member.expert-group-id.notNull='expertGroupId' may not be null
 delete-expert-group-member.user-id.notNull='userId' may not be null
+delete-expert-group-member.user-id.notFound=Member with the given 'user-id' does not exist.
