FAC-329: Controller and useCase added with test

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -49,3 +49,6 @@ confirm-expert-group-invitation.invite-token.expired='inviteToken' is expired
 confirm-expert-group-invitation.invitation-link.notValid=Expert group invitation link is not valid
 confirm-expert-group-invitation.invite-token.notValid='inviteToken' is not valid
 confirm-expert-group-invitation.userId.duplicate=The user with the 'userId' already has access to the expert group with the 'expertGroupId'
+
+add-space-member.space-id.notUll='spaceId' may not be null
+add-space-member.email.notUll='email' may not be null
