FAC-294: Minor refactor on messages

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -64,7 +64,7 @@ create-kit-by-dsl.summary.size.min=summary length must be greater than or equal 
 create-kit-by-dsl.summary.size.max=summary length must be less than or equal to 1000
 create-kit-by-dsl.about.notNull='about' may not be null
 create-kit-by-dsl.about.size.min=about length must be greater than or equal to 3
-create-kit-by-dsl.about.size.max=about length must be less than or equal to1000
+create-kit-by-dsl.about.size.max=about length must be less than or equal to 1000
 create-kit-by-dsl.isPrivate.notNull='isPrivate' may not be null
 create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
 create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
@@ -75,7 +75,7 @@ get-kit-editable-info.kitId.notNull='kitId' may not be null
 
 edit-kit-info.kitId.notNull='assessmentKitId' may not be empty
 edit-kit-info.kitId.notFound=AssessmentKit with the given id does not exist
-edit-kit-info.title.size.min='title' length must be greater or equal to 3
+edit-kit-info.title.size.min='title' length must be greater than or equal to 3
 edit-kit-info.title.size.max='title' length must be less than or equal to 50
 edit-kit-info.summary.size.min=summary length must be greater than or equal to 3
 edit-kit-info.summary.size.max=summary length must be less than or equal to 200
